Connected to MYSQL Workbench

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,6 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySQLConnection": "server=localhost;Database=appdbtodocsharp;Uid=root;Pwd=w3Gq@x8f}_XCn9w,Fc*s>J!xW)HKU!;"
   }
 }
-
